--- a/app/components/anonymousBookPage/anonymousBookPage.html
+++ b/app/components/anonymousBookPage/anonymousBookPage.html
@@ -55,6 +55,7 @@
             <!--<ng-include src="'/BookBox/BookBoxUX/app/shared/anonymousToolbar/anonymousToolbar.html'"></ng-include> -->
             <anonymous-header></anonymous-header>
             <search-box selected-type="selectedType" search-text="searchText" selected-item="selectedItem"></search-box>
+            <div class="d-flex justify-content-center">
             <div class="container bookContainer">
                 <div class="row">
                     <div class="col-sm-2 bookImg">
@@ -100,6 +101,6 @@
                     </div>
                 </div>
             </div>
-            
+            </div>
         </body>
     </html>
