--- a/app/components/anonymousBookPage/anonymousBookPage.html
+++ b/app/components/anonymousBookPage/anonymousBookPage.html
@@ -70,19 +70,20 @@
                         </div> 
                          <div class="row">
                              <star-rating max="5" rating-value="rating" read-only="true"></star-rating>
-                             <span><a href="" class="links review">0 Reviews</a></span>
+                             <span><a href="" class="links review">{{reviewCount}} Reviews</a></span>
                         </div>
                          <div class="row">
                              <h6 class="bookLabel">By:</h6>
-                             <span><a href="" class="links">{{bookOnDisplay.author}}</a></span>
+                             <span><a href="" class="links" ng-click="goToAuthorPage(bookOnDisplay.author)">{{bookOnDisplay.author}}</a></span>
                         </div>
                          <div class="row">
                              <h6 class="bookLabel">Publisher:</h6>
-                             <span><a href="" class="links">{{bookOnDisplay.publisher}}</a></span>
+                             <span><a href="" class="links" ng-click="goToPublisherPage(bookOnDisplay.publisher)">{{bookOnDisplay.publisher}}</a></span>
                         </div>
                          <div class="row">
                              <h6 class="bookLabel">Category:</h6>
-                             <span><a href="" class="links">{{bookOnDisplay.categoryId.categoryName}}</a></span>
+                             <span><a href="" class="links" 
+                                      ng-click="goToCategoriesPage(bookOnDisplay.categoryId.categoryId, bookOnDisplay.categoryId.categoryName)">{{bookOnDisplay.categoryId.categoryName}}</a></span>
                         </div>
                          <div class="row">
                              <h6 class="bookLabel">Read by {{bookOnDisplay.readCount}} readers</h6>
