Rating Dialog and homepage redirection

--- a/app/components/anonymousBookPage/anonymousBookPage.html
+++ b/app/components/anonymousBookPage/anonymousBookPage.html
@@ -70,7 +70,7 @@
                         </div> 
                          <div class="row">
                              <star-rating max="5" rating-value="rating" read-only="true"></star-rating>
-                             <span><a href="" class="links review">{{reviewCount}} Reviews</a></span>
+                             <span><a href="" class="links review" ng-click="showAnonymousReviewDlg($event)">{{reviewCount}} Reviews</a></span>
                         </div>
                          <div class="row">
                              <h6 class="bookLabel">By:</h6>
