--- a/app/components/loginPage/loginPage.html
+++ b/app/components/loginPage/loginPage.html
@@ -1,80 +1,35 @@
 <html>
     <head>
         <style>
-            .page-background{
-               background: linear-gradient(rgba(102, 102, 102, 0.7), rgba(102, 102, 102, 0.7)),url(/BookBox/BookBoxUX/assets/img/logos/books-library-students.jpg) no-repeat center center fixed;           
-               background-size: cover;
-               height:100vh;
-               overflow: hidden;
-               z-index:-2;    
-               
-              }
-            .page-color{
-                background-color: #666666; 
-                width:inherit;
-                height: inherit;
-                opacity:0.85;
-                z-index: -1;
-            }
-            .centered{
-                position:absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                width:557px;
-                height:220px;
-                margin:auto;
-                padding-right: 226px;
-            }
-            md-input-container:not(.md-input-invalid).md-input-focused label{
-                color: rgb(250,250,250);
-                font-weight:bold;
-            }
-            md-input-container:not(.md-input-invalid).md-input-has-value label {
-                color: rgb(250,250,250);
-                font-weight:bold;
-            }
-            md-input-container label{
-                color:#423b3bdb;
-                font-style: italic;
-                font-size: 14px;
-            }
-         md-input-container .md-input{
-                background-color: rgb(250,250,250);
-                height:30px;
-                width:250px;
-            }
-
         </style>
     </head>
     <body>
         <div class="page-background">
-                <div style="z-index: 5;">
+                <div>
                   <div  class="centered">
                     <div class="row">
-                        <div class="col-sm-6" style="margin-right: 30px;margin-top: 100px;">
+                        <div class="col-sm-6 home-icon">
                             <a href="/BookBox/BookBoxUX/#/" ><img src="/BookBox/BookBoxUX/assets/img/logos/bookbox_logo2.png"  width="160" height="60" ></a>
                         </div>
-                        <div class="col-sm-2" style="border-left:1px solid white; height: 280px"></div>
+                        <div class="col-sm-2 separator"></div>
                         <div class="col-sm-2" ng-keydown="$event.keyCode === 13 && performLogin(username,password)">
-                        <div class="row">
+                        <div class="row custom-2">
                             <md-input-container>
                                 <label>Username or Email</label>
                                 <input ng-model="username" autofocus>
                             </md-input-container>
                         </div> 
-                        <div class="row">
+                        <div class="row custom-2">
                             <md-input-container>
                                 <label>Password</label>
                                 <input ng-model="password" type=password>
                             </md-input-container>
                         </div> 
-                        <div class="row" style="width: 250px;">
-                            <a href="" class="btn btn-success" style="width: 250px;" ng-click="performLogin(username,password)" ng-keydown="$event.keyCode === 13 && performLogin(username,password)">Sign In</a>
+                        <div class="row row-width">
+                            <a href="" class="btn btn-success row-width"  ng-click="performLogin(username,password)" ng-keydown="$event.keyCode === 13 && performLogin(username,password)">Sign In</a>
                         </div>
-                        <div class="row" style="width:250px;">
-                            <a href="/BookBox/BookBoxUX/#/signup"  class="bb-header-hyperlinks" style="margin-left: 100px; margin-top: 22px; font-size:small;">Sign Up</a>
+                        <div class="row row-width">
+                            <a href="/BookBox/BookBoxUX/#/signup"  class="bb-header-hyperlinks sign-up-link">Sign Up</a>
                         </div>    
                       </div>
                      </div>    
