Implemented NavBar directive

--- a/app/components/loggedInHomePage/loggedInHomePage.html
+++ b/app/components/loggedInHomePage/loggedInHomePage.html
@@ -1,1 +1,11 @@
-User {{userInfo.user.name}} is logged in
+
+<anonymous-header></anonymous-header>
+
+<div style="display:flex; position: relative;">
+<logged-in-navbar style="position:absolute;" current-selection="0"></logged-in-navbar>
+<div style="justify-content: center; width:100vw;">
+    <search-box selected-type="selectedType" search-text="searchText" selected-item="selectedItem"></search-box>
+    User {{userInfo.user.name}} is logged in
+</div>    
+
+</div>    
