--- a/assets/css/loggedInNavBar.css
+++ b/assets/css/loggedInNavBar.css
@@ -58,12 +58,23 @@
 #sidenav{
     background-color: #666666;
 
-    width:10vh;
-
+    width:5vw;
+    
     display: flex;
     flex-direction: column;
-    height:100vh;
+    justify-content: space-between;
+    height:100%;
     transition: width 0.2s;
+    z-index: 1500;
+}
+#sidenav::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+#sidenav::before{
+    height: 100%
 }
 
 #sidenav ul li a:link, #sidenav ul li a:visited{
@@ -80,6 +91,15 @@
     display:block;
     margin-top:15px;
     margin-bottom:15px;
+    position: relative;
+}
+
+.list li::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%
 }
 
 
