--- a/app/components/anonymousCategoryPage/anonymousCategoryPage.html
+++ b/app/components/anonymousCategoryPage/anonymousCategoryPage.html
@@ -9,6 +9,8 @@
 
 <body>
 <anonymous-header></anonymous-header>
+<div style="display:inline-block; position:relative; width:100vw">
+<logged-in-navbar style="position:absolute;height:100%;" ng-hide="currentUser == ''"></logged-in-navbar>
 <search-box selected-type="selectedType" search-text="searchText" selected-item="selectedItem"></search-box>
 <div class="container">
 <div class="row">  
@@ -33,6 +35,7 @@
        
   </div>
  </div>  
+</div>
 </div>
 </body>
 
