--- a/app/components/history/history.html
+++ b/app/components/history/history.html
@@ -6,10 +6,46 @@
         <body>
             
             <anonymous-header></anonymous-header>
-            <div style="display:inline-block; position:relative; width:100vw; height:100vh">
-                <logged-in-navbar style="position:absolute;height:100%;" current-selection="3"></logged-in-navbar>
+            <div style="display:inline-block; position:relative; width:100vw;height:100%">
+                <logged-in-navbar style="position:absolute;min-height: 100vh;" current-selection="3"></logged-in-navbar>
                 <search-box selected-type="selectedType" search-text="searchText" selected-item="selectedItem"></search-box>
-                <h2 class="title" style="margin-left: 70px;">History</h2>
+                <h2 class="title" style="margin-left: 90px;">History</h2>
+                <h6 class="title" style="margin-left: 90px;">You have {{historyCount}} History Items</h6>
+                <div>
+                    <ul style="list-style:none;padding-left: 0px;margin-left: 90px; margin-right: 35px;">
+                        <li ng-repeat="currentBook in currentBookList" style="height:160px;margin-top:20px;margin-bottom: 10px;background: #F2F2F2">
+                            <div class="row">
+                                <div class="col-sm-8" style="margin-left: 45px;">
+                                    <div class="row" style="margin-top: 20px; margin-bottom: 20px;" >
+                                        <h5><span><a href="" class="links" ng-click="goToBookPage(currentBook.book)">{{currentBook.book.title}}</a></span></h5>
+                                    </div>
+                                    <div class="row" style="margin-top:20px;" >
+                                       <p class="bookLabel" style="font-size: small; margin:0;">By:</p>   
+                                        <a href="" style="font-size: small; margin-bottom: 2px;" class="links" ng-click="goToAuthorPage(currentBook.book.author)">{{currentBook.book.author}}</a>
+                                    </div>
+                                    <div class="row">
+                                       <p class="bookLabel" style="font-size: small;margin:0;">Publisher:</p>   
+                                        <a href="" style="font-size: small; margin-bottom: 2px;" class="links" ng-click="goToPublisherPage(currentBook.book.publisher)">{{currentBook.book.publisher}}</a>
+                                    </div>
+                                    <div class="row">
+                                       <p class="bookLabel" style="font-size: small;margin:0;">{{currentBook.percentageCompleted}}</p>   
+                                       <span class="bookLabel" style="font-size: small;margin:0;">% Completed</span>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2" style="margin-top:20px;">
+                                    <star-rating max="5" rating-value="currentBook.book.averageRating"  read-only="true"></star-rating>
+                                    <a href="" style="font-size: small; margin-bottom: 2px;" class="links" ng-click="showUserReviewDialog($event, currentBook.book)">{{currentBook.book.reviewCount}} REVIEWS</a>
+                                    <div class="row" style="margin:42px;">
+                                        <a href="" class="btn btn-success">CONTINUE</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-1" style="margin-top:15px;">
+                                    <img alt="historyBook" ng-src="/BookBox/BookBoxUX/assets/img/bookCovers{{currentBook.book.localImageUrl}}" height="130" width="110">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </body>
     </html>
